Add demonstration example with real OCR output
Add visual example showing the model's capability to extract complex text
from academic papers including tables and mathematical notation.

Changes:
- Add examples/doc.png - sample academic paper image
- Add "Example" section in README with input/output demonstration
- Show extracted text with multiple tables (Table 1, 2, 3)
- Include collapsible section with full extracted text
- Update .gitignore to include examples/ folder in repo
- Document processing time: ~30 seconds on GPU

This demonstrates the model successfully extracts:
- Complex tables with proper formatting
- Mathematical notation ($S_{M_k} = 0.04$)
- Figure captions and citations
- Full paragraph text

--- a/.gitignore
+++ b/.gitignore
@@ -50,12 +50,18 @@ models/
 
 # Test images (don't commit user data)
 test_images/
+data/
 *.jpg
 *.png
 *.jpeg
 *.gif
 *.bmp
 *.tiff
+
+# But DO include example images for documentation
+!examples/*.png
+!examples/*.jpg
+!examples/*.jpeg
 
 # Output files
 output/
